test/Fail/DoNotationThenNotInScope.err
DoNotationThenNotInScope.agda:4.5-16: error: [DoNotationError]
_>>_ needs to be in scope to desugar 'do' block
when scope checking
do Set
   Set
